Archive2/c8/b3c45103780bda/output
main.cpp:95:22: error: 'Archive' has not been declared
       void serialize(Archive & ar, const unsigned int version)
                      ^
main.cpp:261:22: error: 'Archive' has not been declared
       void serialize(Archive & ar, const unsigned int version)
                      ^
main.cpp:299:22: error: 'Archive' has not been declared
       void serialize(Archive & ar, const unsigned int version)
                      ^
